# pmv-token

./: Makefile  README.md  db.json  package-lock.json  package.json
.github/workflows/: build_and_test.yml
contracts/: PMV.sol
pmv-eth/: hardhat.config.js
pmv-eth/contracts/: ContractMinter.sol  ERC721Optimized.sol  ERC721OptimizedMock.sol  ERC721ReceiverMock.sol  PMV.sol  PMVMixin.sol  PMVOptimized.sol  PiratesOfTheMetaverse.sol
pmv-eth/scripts/: deploy-local-testing.js  deploy-pmv-test.js
pmv-eth/test/: ERC721.behavior.js  SupportsInterface.behavior.js  match-openzeppelin-test.js  pmv-test.js  pmvoptimized-test.js
pmv-sol/: .gitignore  Anchor.toml  package-lock.json  package.json
pmv-sol/app/: app.js  candy_machine_nfts.js  claim.js  constants.js  helpers.js  initialize-sol-contract.js  latest_config_public_key.txt  latest_uuid.txt  package-lock.json  package.json  validators.js  verify.js
pmv-sol/app/idl/: PMV.json  PMVOptimized.json  PiratesOfTheMetaverse.json  nft_candy_machine.json
pmv-sol/app/test/: integration-test.js  unit-test.js
pmv-sol/programs/pmv/: Cargo.toml
pmv-sol/programs/pmv/src/: lib.rs
pmv-sol/test/: idlToTs.js  nft-candy-machine-types.ts  pmv.ts
pmv-sol/tests/: pmv.ts
scripts/: deploy-pmv-test.js
test/: pmv-test.js  sample-test.js
tests/: test_pmv.py
