[package]
name = "pmv"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pmv"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
vipers = "1.2.1"
anchor-spl = "0.18.0"
